--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,12 +16,13 @@ code {
 }
 
 .cardm {
-  position: absolute;
+  width:100vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 46.64%;
-  left: 50%;
+  /* top: 46.64%;
+  left: 50%; */
 }
 
 .card {
